--- a/seckill-operation/pom.xml
+++ b/seckill-operation/pom.xml
@@ -16,5 +16,13 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.zch.seckill</groupId>
+            <artifactId>seckill-common</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
